# titanic-prediction

./: Dockerfile  README.md  app.py  pyproject.toml  train_model.py
data/: titanic_model.pkl
