[tool.poetry]
name = "titanic-prediction"
version = "0.1.0"
description = ""
authors = ["Zakaria Atlassi <zakaria.atlassi-douch@hec.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
